==> ArduPilot/ardupilot/modules/ChibiOS/os/hal/ports/SPC5/LLD/LINFlex_v1/hal_serial_lld.c <==
#include "hal.h"

static void notify1(io_queue_t *qp) {

  (void)qp;
  if (!SD1.linflexp->UARTCR.B.TXEN) {
    msg_t b = sdRequestDataI(&SD1);
    if (b != Q_EMPTY) {
      SD1.linflexp->UARTCR.B.TXEN = 1;
      SD1.linflexp->BDRL.B.DATA0 = b;
    }
  }
}

static void notify2(io_queue_t *qp) {

  (void)qp;
  if (!SD2.linflexp->UARTCR.B.TXEN) {
    msg_t b = sdRequestDataI(&SD2);
    if (b != Q_EMPTY) {
      SD2.linflexp->UARTCR.B.TXEN = 1;
      SD2.linflexp->BDRL.B.DATA0 = b;
    }
  }
}

static void notify3(io_queue_t *qp) {

  (void)qp;
  if (!SD3.linflexp->UARTCR.B.TXEN) {
    msg_t b = sdRequestDataI(&SD3);
    if (b != Q_EMPTY) {
      SD3.linflexp->UARTCR.B.TXEN = 1;
      SD3.linflexp->BDRL.B.DATA0 = b;
    }
  }
}

static void notify4(io_queue_t *qp) {

  (void)qp;
  if (!SD4.linflexp->UARTCR.B.TXEN) {
    msg_t b = sdRequestDataI(&SD4);
    if (b != Q_EMPTY) {
      SD4.linflexp->UARTCR.B.TXEN = 1;
      SD4.linflexp->BDRL.B.DATA0 = b;
    }
  }
}

static void notify5(io_queue_t *qp) {

  (void)qp;
  if (!SD5.linflexp->UARTCR.B.TXEN) {
    msg_t b = sdRequestDataI(&SD5);
    if (b != Q_EMPTY) {
      SD5.linflexp->UARTCR.B.TXEN = 1;
      SD5.linflexp->BDRL.B.DATA0 = b;
    }
  }
}

static void notify6(io_queue_t *qp) {

  (void)qp;
  if (!SD6.linflexp->UARTCR.B.TXEN) {
    msg_t b = sdRequestDataI(&SD6);
    if (b != Q_EMPTY) {
      SD6.linflexp->UARTCR.B.TXEN = 1;
      SD6.linflexp->BDRL.B.DATA0 = b;
    }
  }
}

static void notify7(io_queue_t *qp) {

  (void)qp;
  if (!SD7.linflexp->UARTCR.B.TXEN) {
    msg_t b = sdRequestDataI(&SD7);
    if (b != Q_EMPTY) {
      SD7.linflexp->UARTCR.B.TXEN = 1;
      SD7.linflexp->BDRL.B.DATA0 = b;
    }
  }
}

static void notify8(io_queue_t *qp) {

  (void)qp;
  if (!SD8.linflexp->UARTCR.B.TXEN) {
    msg_t b = sdRequestDataI(&SD8);
    if (b != Q_EMPTY) {
      SD8.linflexp->UARTCR.B.TXEN = 1;
      SD8.linflexp->BDRL.B.DATA0 = b;
    }
  }
}

static void notify9(io_queue_t *qp) {

  (void)qp;
  if (!SD9.linflexp->UARTCR.B.TXEN) {
    msg_t b = sdRequestDataI(&SD9);
    if (b != Q_EMPTY) {
      SD9.linflexp->UARTCR.B.TXEN = 1;
      SD9.linflexp->BDRL.B.DATA0 = b;
    }
  }
}

static void notify10(io_queue_t *qp) {

  (void)qp;
  if (!SD10.linflexp->UARTCR.B.TXEN) {
    msg_t b = sdRequestDataI(&SD10);
    if (b != Q_EMPTY) {
      SD10.linflexp->UARTCR.B.TXEN = 1;
      SD10.linflexp->BDRL.B.DATA0 = b;
    }
  }
}

void sd_lld_init(void) {

#if SPC5_SERIAL_USE_LINFLEX0
  sdObjectInit(&SD1, NULL, notify1);
  SD1.linflexp = &SPC5_LINFLEX0;
  INTC_PSR(SPC5_LINFLEX0_RXI_NUMBER) = SPC5_SERIAL_LINFLEX0_PRIORITY;
  INTC_PSR(SPC5_LINFLEX0_TXI_NUMBER) = SPC5_SERIAL_LINFLEX0_PRIORITY;
  INTC_PSR(SPC5_LINFLEX0_ERR_NUMBER) = SPC5_SERIAL_LINFLEX0_PRIORITY;
#endif

#if SPC5_SERIAL_USE_LINFLEX1
  sdObjectInit(&SD2, NULL, notify2);
  SD2.linflexp = &SPC5_LINFLEX1;
  INTC_PSR(SPC5_LINFLEX1_RXI_NUMBER) = SPC5_SERIAL_LINFLEX1_PRIORITY;
  INTC_PSR(SPC5_LINFLEX1_TXI_NUMBER) = SPC5_SERIAL_LINFLEX1_PRIORITY;
  INTC_PSR(SPC5_LINFLEX1_ERR_NUMBER) = SPC5_SERIAL_LINFLEX1_PRIORITY;
#endif

#if SPC5_SERIAL_USE_LINFLEX2
  sdObjectInit(&SD3, NULL, notify3);
  SD3.linflexp = &SPC5_LINFLEX2;
  INTC_PSR(SPC5_LINFLEX2_RXI_NUMBER) = SPC5_SERIAL_LINFLEX2_PRIORITY;
  INTC_PSR(SPC5_LINFLEX2_TXI_NUMBER) = SPC5_SERIAL_LINFLEX2_PRIORITY;
  INTC_PSR(SPC5_LINFLEX2_ERR_NUMBER) = SPC5_SERIAL_LINFLEX2_PRIORITY;
#endif

#if SPC5_SERIAL_USE_LINFLEX3
  sdObjectInit(&SD4, NULL, notify4);
  SD4.linflexp = &SPC5_LINFLEX3;
  INTC_PSR(SPC5_LINFLEX3_RXI_NUMBER) = SPC5_SERIAL_LINFLEX3_PRIORITY;
  INTC_PSR(SPC5_LINFLEX3_TXI_NUMBER) = SPC5_SERIAL_LINFLEX3_PRIORITY;
  INTC_PSR(SPC5_LINFLEX3_ERR_NUMBER) = SPC5_SERIAL_LINFLEX3_PRIORITY;
#endif

#if SPC5_SERIAL_USE_LINFLEX4
  sdObjectInit(&SD5, NULL, notify5);
  SD5.linflexp = &SPC5_LINFLEX4;
  INTC_PSR(SPC5_LINFLEX4_RXI_NUMBER) = SPC5_SERIAL_LINFLEX4_PRIORITY;
  INTC_PSR(SPC5_LINFLEX4_TXI_NUMBER) = SPC5_SERIAL_LINFLEX4_PRIORITY;
  INTC_PSR(SPC5_LINFLEX4_ERR_NUMBER) = SPC5_SERIAL_LINFLEX4_PRIORITY;
#endif

#if SPC5_SERIAL_USE_LINFLEX5
  sdObjectInit(&SD6, NULL, notify6);
  SD6.linflexp = &SPC5_LINFLEX5;
  INTC_PSR(SPC5_LINFLEX5_RXI_NUMBER) = SPC5_SERIAL_LINFLEX5_PRIORITY;
  INTC_PSR(SPC5_LINFLEX5_TXI_NUMBER) = SPC5_SERIAL_LINFLEX5_PRIORITY;
  INTC_PSR(SPC5_LINFLEX5_ERR_NUMBER) = SPC5_SERIAL_LINFLEX5_PRIORITY;
#endif

#if SPC5_SERIAL_USE_LINFLEX6
  sdObjectInit(&SD7, NULL, notify7);
  SD7.linflexp = &SPC5_LINFLEX6;
  INTC_PSR(SPC5_LINFLEX6_RXI_NUMBER) = SPC5_SERIAL_LINFLEX6_PRIORITY;
  INTC_PSR(SPC5_LINFLEX6_TXI_NUMBER) = SPC5_SERIAL_LINFLEX6_PRIORITY;
  INTC_PSR(SPC5_LINFLEX6_ERR_NUMBER) = SPC5_SERIAL_LINFLEX6_PRIORITY;
#endif

#if SPC5_SERIAL_USE_LINFLEX7
  sdObjectInit(&SD8, NULL, notify8);
  SD8.linflexp = &SPC5_LINFLEX7;
  INTC_PSR(SPC5_LINFLEX7_RXI_NUMBER) = SPC5_SERIAL_LINFLEX7_PRIORITY;
  INTC_PSR(SPC5_LINFLEX7_TXI_NUMBER) = SPC5_SERIAL_LINFLEX7_PRIORITY;
  INTC_PSR(SPC5_LINFLEX7_ERR_NUMBER) = SPC5_SERIAL_LINFLEX7_PRIORITY;
#endif

#if SPC5_SERIAL_USE_LINFLEX8
  sdObjectInit(&SD9, NULL, notify9);
  SD9.linflexp = &SPC5_LINFLEX8;
  INTC_PSR(SPC5_LINFLEX8_RXI_NUMBER) = SPC5_SERIAL_LINFLEX8_PRIORITY;
  INTC_PSR(SPC5_LINFLEX8_TXI_NUMBER) = SPC5_SERIAL_LINFLEX8_PRIORITY;
  INTC_PSR(SPC5_LINFLEX8_ERR_NUMBER) = SPC5_SERIAL_LINFLEX8_PRIORITY;
#endif

#if SPC5_SERIAL_USE_LINFLEX9
  sdObjectInit(&SD10, NULL, notify10);
  SD10.linflexp = &SPC5_LINFLEX9;
  INTC_PSR(SPC5_LINFLEX9_RXI_NUMBER) = SPC5_SERIAL_LINFLEX9_PRIORITY;
  INTC_PSR(SPC5_LINFLEX9_TXI_NUMBER) = SPC5_SERIAL_LINFLEX9_PRIORITY;
  INTC_PSR(SPC5_LINFLEX9_ERR_NUMBER) = SPC5_SERIAL_LINFLEX9_PRIORITY;
#endif
}

void sd_lld_start(SerialDriver *sdp, const SerialConfig *config) {

  if (config == NULL)
    config = &default_config;

  if (sdp->state == SD_STOP) {
#if SPC5_SERIAL_USE_LINFLEX0
    if (&SD1 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX0_PCTL,
                                   SPC5_SERIAL_LINFLEX0_START_PCTL);
    }
#endif
#if SPC5_SERIAL_USE_LINFLEX1
    if (&SD2 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX1_PCTL,
                                   SPC5_SERIAL_LINFLEX1_START_PCTL);
    }
#endif
#if SPC5_SERIAL_USE_LINFLEX2
    if (&SD3 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX2_PCTL,
                                   SPC5_SERIAL_LINFLEX2_START_PCTL);
    }
#endif
#if SPC5_SERIAL_USE_LINFLEX3
    if (&SD4 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX3_PCTL,
                                   SPC5_SERIAL_LINFLEX3_START_PCTL);
    }
#endif
#if SPC5_SERIAL_USE_LINFLEX4
    if (&SD5 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX4_PCTL,
                                   SPC5_SERIAL_LINFLEX4_START_PCTL);
    }
#endif
#if SPC5_SERIAL_USE_LINFLEX5
    if (&SD6 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX5_PCTL,
                                   SPC5_SERIAL_LINFLEX5_START_PCTL);
    }
#endif
#if SPC5_SERIAL_USE_LINFLEX6
    if (&SD7 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX6_PCTL,
                                   SPC5_SERIAL_LINFLEX6_START_PCTL);
    }
#endif
#if SPC5_SERIAL_USE_LINFLEX7
    if (&SD8 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX7_PCTL,
                                   SPC5_SERIAL_LINFLEX7_START_PCTL);
    }
#endif
#if SPC5_SERIAL_USE_LINFLEX8
    if (&SD9 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX8_PCTL,
                                   SPC5_SERIAL_LINFLEX8_START_PCTL);
    }
#endif
#if SPC5_SERIAL_USE_LINFLEX9
    if (&SD10 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX9_PCTL,
                                   SPC5_SERIAL_LINFLEX9_START_PCTL);
    }
#endif
  }
  spc5_linflex_init(sdp, config);
}

void sd_lld_stop(SerialDriver *sdp) {

  if (sdp->state == SD_READY) {
    spc5_linflex_deinit(sdp->linflexp);

#if SPC5_SERIAL_USE_LINFLEX0
    if (&SD1 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX0_PCTL,
                                   SPC5_SERIAL_LINFLEX0_STOP_PCTL);
      return;
    }
#endif
#if SPC5_SERIAL_USE_LINFLEX1
    if (&SD2 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX1_PCTL,
                                   SPC5_SERIAL_LINFLEX1_STOP_PCTL);
      return;
    }
#endif
#if SPC5_SERIAL_USE_LINFLEX2
    if (&SD3 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX2_PCTL,
                                   SPC5_SERIAL_LINFLEX2_STOP_PCTL);
      return;
    }
#endif
#if SPC5_SERIAL_USE_LINFLEX3
    if (&SD4 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX3_PCTL,
                                   SPC5_SERIAL_LINFLEX3_STOP_PCTL);
      return;
    }
#endif
#if SPC5_SERIAL_USE_LINFLEX4
    if (&SD5 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX4_PCTL,
                                   SPC5_SERIAL_LINFLEX4_STOP_PCTL);
      return;
    }
#endif
#if SPC5_SERIAL_USE_LINFLEX5
    if (&SD6 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX5_PCTL,
                                   SPC5_SERIAL_LINFLEX5_STOP_PCTL);
      return;
    }
#endif
#if SPC5_SERIAL_USE_LINFLEX6
    if (&SD7 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX6_PCTL,
                                   SPC5_SERIAL_LINFLEX6_STOP_PCTL);
      return;
    }
#endif
#if SPC5_SERIAL_USE_LINFLEX7
    if (&SD8 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX7_PCTL,
                                   SPC5_SERIAL_LINFLEX7_STOP_PCTL);
      return;
    }
#endif
#if SPC5_SERIAL_USE_LINFLEX8
    if (&SD9 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX8_PCTL,
                                   SPC5_SERIAL_LINFLEX8_STOP_PCTL);
      return;
    }
#endif
#if SPC5_SERIAL_USE_LINFLEX9
    if (&SD10 == sdp) {
      halSPCSetPeripheralClockMode(SPC5_LINFLEX9_PCTL,
                                   SPC5_SERIAL_LINFLEX9_STOP_PCTL);
      return;
    }
#endif
  }
}
